force-app/main/default/objects/Track_API_Call__c/Track_API_Call__c.object-meta.xml
<CustomObject>
    <label>Track API Call</label>
    <nameField>
        <displayFormat>API-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track API Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>