force-app/main/default/objects/Track_API_Call__c/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <label>Http_Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>