force-app/main/default/objects/Track_API_Call__c/fields/IP_address__c.field-meta.xml
<CustomField>
    <fullName>IP_address__c</fullName>
    <label>IP address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>