force-app/main/default/objects/Track_API_Call__c/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <label>Request_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>