force-app/main/default/objects/Track_API_Call__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_URL__c</columns>
    <columns>Status__c</columns>
    <columns>StatusCode__c</columns>
    <columns>Http_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>