force-app/main/default/objects/Track_API_Call__c/listViews/Errors.listView-meta.xml
<ListView>
    <fullName>Errors</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_URL__c</columns>
    <columns>Http_Method__c</columns>
    <columns>Response__c</columns>
    <columns>Status__c</columns>
    <columns>StatusCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Errors</label>
</ListView>