force-app/main/default/objects/Track_API_Call__c/listViews/Post_Requests.listView-meta.xml
<ListView>
    <fullName>Post_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Http_Method__c</columns>
    <columns>Response__c</columns>
    <columns>Status__c</columns>
    <columns>StatusCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Http_Method__c</field>
        <operation>equals</operation>
        <value>POST</value>
    </filters>
    <label>Post Requests</label>
</ListView>