force-app/main/default/objects/Track_API_Call__c/listViews/Today_s_API_Calls.listView-meta.xml
<ListView>
    <fullName>Today_s_API_Calls</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_URL__c</columns>
    <columns>Http_Method__c</columns>
    <columns>Response__c</columns>
    <columns>Status__c</columns>
    <columns>StatusCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s API Calls</label>
</ListView>